--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-:root {
+ :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -23,4 +23,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+} 
+
+
+.input-field {
+  @apply w-full tracking-wide border font-medium text-xs border-gray-200 px-3 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-purple-400;
 }
